@@ -16,6 +16,7 @@ complete change log
 * Added warning messages for users who try to compile APBS with --enable-tinker flag and run APBS stand-alone execution.
 * Switched default Opal service urls from sccne.wustl.edu to NBCR.
 * Added a sanity check in routines.c: 'bcfl map' in the input file requires 'usemap pot' statement in the input file as well.
+* Introduced Vpmgp_size() routine to replace F77MGSZ call in vpmg.c
 
 # BUGFIXES
 * Modified Vpmg_dbForce with some grid checking code provided by Matteo Rotter.
